--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ sendgrid = "^6.4.7"
 slackclient = "^2.9.3"
 PyMySQL = "^0.10.1"
 pendulum = "^2.1.2"
+SQLAlchemy = "1.3.19"
 
 [tool.poetry.dev-dependencies]
 
