--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "data-utils"
-version = "0.1.9"
+version = "0.1.10"
 description = ""
 authors = ["Ryan Whitten <ryan.whitten@bestegg.com>"]
 
@@ -14,6 +14,7 @@ slackclient = "^2.9.3"
 PyMySQL = "^0.10.1"
 pendulum = "^2.1.2"
 SQLAlchemy = "1.3.19"
+python-gnupg = "^0.4.6"
 
 [tool.poetry.dev-dependencies]
 
