--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ SQLAlchemy = "1.3.19"
 python-gnupg = "^0.4.6"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.2"
+pytest-cov = "^2.11.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
